# Weevil

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SPECIFICATION.md  TODO.md  app_settings.toml  app_settings.toml.example  build.sh  debug.sh  watch.sh  weevil.json  weevil.toml
.github/workflows/: ci.yml
Game/: Game.cpp  Game.hpp  main.cpp
New File: assets/ui/: Menu.slint
cmake/: 3rdparty.cmake  WeevilEngineConfig.cmake.in  config.cmake  imgui.cmake
config/: weevil.toml
dependencies/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
game/: game.cpp
include/: SDL_Deleter.hpp
include/WeevilEngine/: AppContext.h  AppSettings.h  AssetManager.h  Components.h  Engine.h  FileHelper.h  FileWatcher.h  Game.h  GameEvent.h  GameModule.h  GameModuleAPI.h  InputContext.h  Log.h  NoCopy.h  Renderer.h  SDLContext.h  SDL_Deleter.h  Scene.h  SceneManager.h  System.h  SystemManager.h  UUID.h  WeevilEngine.h  weevil.h  wvpch.h
include/weevil/: pch.h  weevil.h  weevil_api.h
include/weevil/core/: app_context.h  app_settings.h  components.h  dispatchables.h  events.h  imodule.h  log.h  module.h  rendering.h  rngen.h  uuid.h  window.h
modules/: CMakeLists.txt
modules/debug/: module.cpp
modules/gameplay/: module.cpp
modules/render/: module.cpp
src/: CMakeLists.txt  ECS.hpp  dummy.cpp  main.cpp  pch.h  wvpch.h  wvpch.hpp
src/Components/: PositionComponent.hpp  RenderComponent.hpp  RenderableComponent.hpp
src/Core/: AppSettings.cpp  AppSettings.hpp  Application.cpp  GameModule.cpp  InputContext.cpp  Log.cpp  Log.hpp  SDLContext.cpp  SDLContext.hpp  UUID.cpp
src/Engine/: Engine.cpp
src/Entities/: Entity.h
src/Game/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
src/HotReloading/: FileWatcher.cpp
src/Processes/: InputProcess.hpp  RenderProcess.hpp  UpdateProcess.hpp
src/Renderer/: Renderer.cpp
src/Resources/: AssetLoader.cpp  AssetLoader.h  Assets.cpp  Assets.hpp  Logger.cpp  Logger.hpp
src/Scene/: Components.hpp  SceneManager.cpp
src/States/: GameState.hpp  MainGameState.cpp  MainGameState.hpp  MenuState.cpp  MenuState.h  MenuState.hpp
src/System/: AssetManager.cpp  Scheduler.cpp  Scheduler.h  SystemManager.cpp
src/Systems/: RenderSystem.cpp  RenderSystem.hpp
src/Utils/: SDL_Deleter.hpp  UUID.cpp  UUID.hpp
src/core/: app_settings.cpp  application.cpp  application.h  appsettings.cpp  asset_loader.cpp  asset_loader.h  game_module.cpp  game_module.h  log.cpp  module_data.h  module_manager.cpp  module_manager.h  sdl_deleter.h  sdl_main.cpp  uuid.cpp
src/include/: AppContext.h  CustomEvents.h  EventFd.h  FileWatcher.h  GameModule.h
src/internal/: custom_events.h  event_fd.h  inotify_wrapper.h  module_data.h  no_copy.h
src/platform/: common.h
src/platform/common/: file_watcher.h  filewatcher.h  hot_reloader.h  platform.cpp  platform.h
src/platform/common/rendering/: renderer.cpp  renderer.h  sprite_texture.cpp  sprite_texture.h  text_texture.cpp  text_texture.h  texture.h
src/platform/linux/: file_watcher.cpp  hot_reloader.cpp  hot_reloader.h
src/private/core/: application.h
src/private/platform/linux/: event_fd.h  inotify_wrapper.h
tests/: main.cpp  square.cpp
tests/brotato/: InputSystem.cpp  PlayerSystem.cpp  PlayerSystem.h  player.cpp  player.h
tests/brotato/MainGame/: InputSystem.h  MainGameScene.cpp  MainGameScene.h
tests/brotato/MainGame/Systems/: InputSystem.cpp  PlayerSystem.cpp
tests/brotato/MainMenu/: MainMenuScene.cpp  MainMenuScene.h
tests/brotato/Shared/: BrotatoComponents.h
